# agent-life-tracker

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: philosophy.md  secretary-shadow-thread.md
examples/: simple_demo.py  timeout_recovery_demo.py  tool_handoff_demo.py
src/agent_life_tracker/: __init__.py  exceptions.py  formatting.py  models.py  storage.py  tracker.py
tests/: test_handoff.py  test_storage.py  test_tracker.py
