[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-life-tracker"
version = "0.1.0"
description = "A tiny sidecar continuity layer for long-running agents."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Xiaoyu City Pattern Contributors" }
]
requires-python = ">=3.9"
keywords = [
  "agents",
  "continuity",
  "handoff",
  "sidecar",
  "long-running-agents",
  "task-tracking"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

